samples/_failures_safe/1761086706_ba4ea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b9c201c.c: In function ‘main’:
./samples/SAFE/__tmp_9b9c201c.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
